Fix: Selected item in dropdown unreadable (#3398)

--- a/client/app/assets/less/redash/redash-newstyle.less
+++ b/client/app/assets/less/redash/redash-newstyle.less
@@ -953,7 +953,7 @@ text.slicetext {
   }
 }
 
-.ui-select-choices-row > span {
+.ui-select-choices-row.disabled > span {
   background-color: inherit !important;
 }
 
